[gd_scene load_steps=4 format=3 uid="uid://cmfqu7cubieuo"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_nibxk"]

[sub_resource type="SystemFont" id="SystemFont_2u336"]

[sub_resource type="Theme" id="Theme_18pvo"]
default_font = SubResource("SystemFont_2u336")

[node name="main_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_18pvo")
script = ExtResource("1_nibxk")

[node name="terminal_output" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2

[node name="terminal_input" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -98.0
offset_bottom = -67.0
grow_horizontal = 2
grow_vertical = 0
